# banshu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  release-plz.toml
.github/workflows/: ci.yml
crates/ai/: CHANGELOG.md  Cargo.toml
crates/ai/src/: auth.rs  cancel.rs  discovery.rs  error.rs  executor.rs  http.rs  lib.rs  options.rs  registry.rs  sse.rs  stream.rs
crates/ai/src/api/: anthropic_messages.rs  assembler.rs  mod.rs  openai_completions.rs  protocol_event.rs
crates/ai/src/models/: dev.rs  mod.rs
crates/ai/src/models/catalog/: deepseek.json  kimi.json  minimax.json  moonshot.json  xiaomi.json  zai.json
crates/ai/src/provider/: mod.rs
crates/ai/src/types/: content.rs  context.rs  message.rs  mod.rs  model.rs  tool.rs  usage.rs
crates/ai/tests/: anthropic_messages_stream.rs  anthropic_messages_termination.rs  anthropic_messages_thinking.rs  anthropic_messages_tool_calls.rs  anthropic_prompt_caching.rs  anthropic_thinking_replay.rs  auth_adapters.rs  cancellation.rs  catalog.rs  context_snapshot.rs  dynamic_discovery.rs  error_body_diagnostics.rs  inband_protocol_errors.rs  message_stream_contract.rs  models_registry.rs  openai_completions_errors.rs  openai_completions_stream.rs  openai_completions_termination.rs  openai_completions_thinking.rs  openai_completions_tool_calls.rs  openai_prompt_caching.rs  openai_thinking_replay.rs  retry.rs  stream_state_machine.rs  tool_result_roundtrip.rs  tools_in_request.rs  usage_cost.rs  vendor_providers.rs
crates/ai/tests/fixtures/: context_snapshot_v1.json
crates/xtask/: Cargo.toml
(+2 files in other folders)
